Create CRUD letter management
